# PyAvrOCD

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  INSTALL.md  LICENSE  LICENSE.md  NEW.md  README.md  intel-apple-pyavrocd.spec  macos-14-pyavrocd.spec  mkdocs.yaml  newversion.sh  pyavrocd.spec  pyproject.toml  pytest.ini  requirements.txt  run_pylint.sh  ubuntu-22.04-arm-pyavrocd.spec
.github/actions/: install-env.yml
.github/workflows/: build-binaries.yml  build.yml  check.yml  create-badge.yml  deploy.yml  doc-upload.yml  pylint.yaml  pylint.yml  pypi.yml  release.yml  tag-test.yml  unit-tests-matrix.yml  unit-tests.yml  upload.yml
atdf/: ATmega64C1.patch  ATmega64M1.patch  Atmega808.patch  OCD-Access.md  README.md
atdf/mega-3.4.282/: AT90CAN32.atdf  AT90PWM216.atdf  AT90PWM3.atdf  AT90PWM81.atdf  ATmega128.atdf  ATmega1281.atdf  ATmega128RFA1.atdf  ATmega128RFR2.atdf  ATmega164P.atdf  ATmega164PA.atdf  ATmega165A.atdf  ATmega169P.atdf  ATmega16HVBrevB.atdf  ATmega16M1.atdf  ATmega256RFR2.atdf  ATmega32.atdf  ATmega3209.atdf  ATmega3250.atdf  ATmega3250PA.atdf  ATmega325A.atdf  ATmega3290P.atdf  ATmega3290PA.atdf  ATmega32HVB.atdf  (+24 more)
docs/: 99-edbg-debuggers.rules  ATTiny2.0.0-tested.md  CNAME  INSTALL.md  LoadSpeed.md  UPDI-notes.md  adaptation-of-core.md  arduino_quick.md  avr-devices.md  board-preparation.md  code_of_conduct-link.md  comannd-line-options.md  command-line-options.md  compilation-options.md  configuration.md  connect-to-target.md  contributing.md  credits-link.md  debug-speed.md  debugging-software.md  debugging.md  debugwire-risks.md  details-boards-manager-url.md  details-install-core.md  details-install-package.md  disclaimer.md  flash-wear.md  fuse-preparation.md  gdb-fixes.md  generate-new-version.md  index.md  install-link.md  install.md  license-link.md  license.md  limitations.md  list-of-oss-avr-gdb-server.md  list-of-probes.md  list-of-usb-cores.md  load-speed.md  (+39 more)
extras/: intel-apple-pyavrocd.spec  macos-13-pyavrocd.spec  newversion.sh-general  packer.sh  pyavrocd.spec  ubuntu-22.04-pyavrocd.spec
pyavrocd/: breakexec.py  debugwiretarget.py  dwlink.py  errors.py  handler.py  hardwarebp.py  jtagtarget.py  livetests.py  main.py  memory.py  monitor.py  pyavrocd.py  server.py  xavr8target.py  xavrdebugger.py  xnvmdebugwire.py  xnvmmegaavrjtag.py  xnvmupdi.py
svd/: LICENSE  README.md  at90can128.svd  at90can32.svd  at90can64.svd  at90pwm1.svd  at90pwm161.svd  at90pwm216.svd  at90pwm2b.svd  at90pwm3.svd  at90pwm316.svd  at90pwm3b.svd  at90pwm81.svd  at90usb1286.svd  at90usb1287.svd  at90usb162.svd  at90usb646.svd  at90usb647.svd  at90usb82.svd  atmega128.svd  atmega1280.svd  atmega1281.svd  atmega1284.svd  atmega1284p.svd  atmega1284rfr2.svd  atmega128a.svd  atmega128rfa1.svd  atmega128rfr2.svd  atmega16.svd  atmega1608.svd  atmega1609.svd  atmega162.svd  atmega164a.svd  atmega164p.svd  atmega164pa.svd  atmega165a.svd  atmega165p.svd  atmega165pa.svd  atmega168.svd  atmega168a.svd  (+259 more)
tests/: README.md  conftest.py  integration_test.py  serv.sh  test_breakandexec.py  test_breakandexec_classify.py  test_breakandexec_filter.py  test_debugwire.py  test_deviceinfo_tiny_updi.py  test_dwlink.py  test_gdbhandler.py  test_hardwarebp.py  test_main.py  test_memory.py  test_monitorcommand.py  test_sample.py  test_server.py  test_xavr8target.py  test_xavr8target_dw.py  test_xavr8target_jtag.py  test_xavr8target_updi.py  test_xavrdebugger.py  test_xnvmdebugwire.py  test_xnvmmegaavrjtag.py  test_xnvmupdi.py
wiki/: Architecture.md  Development.md  Home.md  Installation.md  Project-Status.md  Supported-Hardware.md  Usage.md  _Footer.md  _Sidebar.md
(+719 files in other folders)
