[project]
name = "pyavrocd"
version = "0.13.4"
description = "A platform-agnostic GDB server for AVR MCUs"
authors = [
    {name = "Bernhard Nebel",email = "nebel@arduino-craft-corner.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "pymcuprog (>=3.17.3.45,<4.0.0.0)",
    "pyedbglib (>=2.24.2.18,<3.0.0.0)",
    "pyusb (>=1.3.1,<1.4.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)"
]

[project.urls]
repository = "https://github.com/felias-fogg/pyavrocd"

[project.scripts]
pyavrocd = 'pyavrocd.main:main'

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=pyavrocd",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.pylint.main]
ignore-patterns = ["at(tiny|mega|90).*\\.py"]
jobs = 1

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "f", "x", "y", "z"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
