[project]
name = "pyavrocd"
version = "0.13.5"
description = "A platform-agnostic GDB server for AVR MCUs"
authors = [
    {name = "Bernhard Nebel",email = "nebel@arduino-craft-corner.de"}
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Software Development :: Debuggers"
]
license = {text = "MIT"}
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "pymcuprog (>=3.17.3.45,<4.0.0.0)",
    "pyedbglib (>=2.24.2.18,<3.0.0.0)",
    "pyusb (>=1.3.1,<1.4.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)"
]

[project.urls]
repository = "https://github.com/felias-fogg/PyAvrOCD"
documentation = "https://felias-fogg.github.io/PyAvrOCD/"
"Bug Tracker" = "https://github.com/felias-fogg/PyAvrOCD/issues"

[project.scripts]
pyavrocd = 'pyavrocd.main:main'

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=pyavrocd",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.pylint.main]
ignore-patterns = ["at(tiny|mega|90).*\\.py"]
jobs = 1

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
